--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts": "^5.0.1",
+    "@types/chai": "^4.3.16",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.14.2",
     "dotenv": "^16.4.5",
-    "hardhat": "^2.20.1"
+    "hardhat": "^2.22.5",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
