feature: (SQ-498) Add upgrade feature on factory contract (#15)
* add deployment script

* update deploy script

* update env

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,24 @@
-INFURA_API_KEY=
-PRIVATE_KEY=
+#################### TESTNET CONFIGURATION####################
+SEPOLIA_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/gugiiHEtV3akg3p4Y8y0kYFHT4Fe6nND"
+GOERLI_RPC_URL="https://eth-goerli.public.blastapi.io"
+
+# Deployer private key
+TEST_DEPLOYER_KEY="0x"
+
+#################### MAINNET CONFIGURATION####################
+ETHERUM_RPC_URL="https://eth-mainnet.g.alchemy.com/v2/7uuQCPu-lHbOrA_pkmzXWvDfx-aj6DxH"
+ARBITRUM_RPC_URL=""
+
+# Deployer private key
+DEPLOYER_KEY="0x"
+
+BURN_FEE = 0
+MINT_FEE = 0
+PERCENT_FOR_SELLER = 8500
+DEVELOPMENT_TEAM_ADDRESS = 
+
+
+#################### CONTRACT VERIFIERS ####################
+
+# Etherscan API key to verify contracts
+ETHERSCAN_API_KEY="DF8U1AYKKAW8NHQQJ2H34W6B49H38JI9SU"
